--- a/Thermo_and_Fluid_Engineering_Lab_1_03.ipynb
+++ b/Thermo_and_Fluid_Engineering_Lab_1_03.ipynb
@@ -507,6 +507,11 @@
         "colab": {}
       },
       "source": [
+        "# 기타 참고 자료\n",
+        "* https://jakevdp.github.io/PythonDataScienceHandbook/index.html"
+      ]
+    },
+      "source": [
         "x2[0]"
       ],
       "execution_count": 0,
