--- a/Thermo_and_Fluid_Engineering_Lab_1_03.ipynb
+++ b/Thermo_and_Fluid_Engineering_Lab_1_03.ipynb
@@ -515,6 +515,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "tEGvD6yRWNVU",
+        "colab_type": "text"
+      },
+      "source": [
+        "* Array의 기본 성질"
+      ]
+    },    
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "FoOV10L8E4xv",
         "colab_type": "text"
       },
