--- a/Thermo_and_Fluid_Engineering_Lab_1_03.ipynb
+++ b/Thermo_and_Fluid_Engineering_Lab_1_03.ipynb
@@ -519,8 +519,10 @@
         "colab_type": "text"
       },
       "source": [
-        "* Array의 기본 성질"
+        "# 행렬 Slice 관련 참고 자료\n",
+        "* https://dojang.io/mod/page/view.php?id=2208"
       ]
+    },
     },    
     {
       "cell_type": "markdown",
