Colaboratory를 통해 생성됨

--- a/Thermo_and_Fluid_Engineering_Lab_1_03.ipynb
+++ b/Thermo_and_Fluid_Engineering_Lab_1_03.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "name": "Thermo_and_Fluid_Engineering_Lab_1_03.ipynb",
-      "version": "0.3.2",
       "provenance": [],
       "include_colab_link": true
     },
@@ -464,6 +463,19 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aNhKgOu7FRvC",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "u0Ob9DUfH0lE",
@@ -511,7 +523,18 @@
       ],
       "execution_count": 0,
       "outputs": []
-    },    
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "0fZg8MwlE4-s"
+      },
+      "source": [
+        " Array Slice 참고 자료\n",
+        "* https://dojang.io/mod/page/view.php?id=2208"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
