Colaboratory를 통해 생성됨

--- a/Thermo_and_Fluid_Engineering_Lab_1_04.ipynb
+++ b/Thermo_and_Fluid_Engineering_Lab_1_04.ipynb
@@ -261,7 +261,7 @@
         "colab_type": "text"
       },
       "source": [
-        "* 위 코드를 수행하면, bubblesort_jit는 위에서 선언횐 bubblesort를 컴파일한 함수가 된다.\n",
+        "* 위 코드를 수행하면, bubblesort_jit는 위에서 선언한 bubblesort를 컴파일한 함수가 된다.\n",
         "* \"void(f4[:])\"는 Signature라 불리며 함수의 입력과 리턴을 의미한다.\n",
         "* f4[:]는 입력, void는 리턴을 의미한다."
       ]
